# dogdex-api

./: .env  .gitignore  Cargo.toml  db.sqlite  diesel.toml
migrations/2024-06-20-203233_create_dogs/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
static/: landing.html
